--- a/index.html
+++ b/index.html
@@ -1,9 +1,28 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="../tandem-lg//public/images/delivery-1 1.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Tandem: a worldwide logistics company where swiftness and quality is delivered"
+    />
+    <meta name="keywords" content="Tandem, Logistics, company" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="Tandem" />
+    <meta property="og:description" content="A worldwide logistics company" />
+    <meta
+      property="og:image"
+      content="../tandem-lg/public/images/delivery-1 1.png"
+    />
+    <meta property="og:url" content="https://tandemlogistics.netlify.app/" />
+    <meta name="theme-color" content="#3498db" />
+
     <title>Tandem Logistics</title>
   </head>
   <body>
